v2.3.1 Wed Nov 15 2023
  New error 'SSLError' which is more explicit in case of SSL certificate chain issues
  Allow setting a domain name (only used in test suite)
  Allow setting sslcontext, for example to ignore SSL certificat errors (for debugging only)
  Batch example: Guess if input is coordinate pair, if so then do reverse geocoding
  Batch example: Give example of input file format
  Batch example: Ship CA root certificates instead of relying on those of the operating system

v2.3.0 Tue 04 Jul 2023
  Batch example: Raise exception when API key fails (quota, missing API key)
  Batch example: Raise exception when input file contains an empty line. Better
    early than risking errors later during the async geocoding
  Batch example: The CSV '1, "street,city"' were parsed as 3 columns, not the
    expected 2 columns
  Test suite: Switched from Travis-CI to Github Actions
  Dependencies: Requests 2.26->2.31, backoff 1.10->2.2.1, because only those say to support Python 3.10

v2.2.0 Fri 05 May 2023
  Using requests > 2.26 , pyopenssl no longer a dependency
  Allow setting the http protocol to make API requests (less secure)
  Batch example: add progress bar, can be switched off
  Batch example: add image of output to README
  Examples: mark scripts as executable

v2.1.1 Thu 20 Apr 2023
  Add python 3.11, no longer test against python 3.6
  Test suite: add pytest-asyncio to enable async tests
  Batch example: exception handling caused another exception
  Batch example: by default don't request annotations (faster)
  Documentation improvements

v2.1.0 Thu 13 Oct 2022
  Better handling of non-JSON error responses from API
  Test on Python 3.10

v2.0.0 Thu 15 Jul 2021
  Python 2 no longer supported
  New geocode_async and reverse_geocode_async methods
  You can now reuse HTTP connections for multiple requests by using a `with` block
  Updated examples/batch.py using asyncronous/parallel requests, much faster
  Mayor refactor of test suite